--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="save_success">保存成功到%1$s</string>
     <string name="share_icon">分享</string>
     <string name="please_save">请先保存图片</string>
+    <string name="delete">删除</string>
 </resources>
