--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="login">登 陆</string>
     <string name="user_name">用户名</string>
     <string name="password">密码</string>
+    <string name="upload">上传</string>
+    <string name="share_your_emoji">分享你的表情</string>
 </resources>
